...
                if showStatus && showAvatars {
                    avatarImage()
                        .padding([.trailing], 6)
                }
                VStack(alignment: .leading, spacing: 2) {
                    Text(viewModel.title)
                        .accessibilityIdentifier("Pipeline title")
                        .font(.system(size: NSFont.systemFontSize + 1, weight: .bold))
                    if showStatus {
                        Text(viewModel.statusDescription)
                            .adjustedColor(colorScheme: colorScheme)
                            .accessibilityIdentifier("Status description")
                        if showMessages, let message = viewModel.statusMessage {
                            Text(message)
                                .accessibilityIdentifier("Build message")
                                .adjustedColor(colorScheme: colorScheme)
                        }
                        if let message = viewModel.lastUpdatedMessage {
                            Text(message)
                                .accessibilityIdentifier("Last updated message")
                                .font(.subheadline)
                                .foregroundColor(.secondary)
                        }
                    } else {
                        HStack(alignment: .top, spacing: 4) {
                            Image(viewModel.feedTypeIconName)
...
