...
                Button("Add project from CCTray feed...") {
                    viewState.addCCTrayPipelineSheetConfig.isPresented = true
                }
                Button("Add GitHub Actions workflow...") {
                    viewState.addGitHubPipelineSheetConfig.isPresented = true
                }
                Button("Add GitLab pipeline...") {
                    viewState.addGitLabPipelineSheetConfig.isPresented = true
                }
            } label: {
                Image(systemName: "plus")
            }
            .menuStyle(.button)
            .accessibility(label: Text("Add pipeline menu"))
            .help("Add a pipeline")

            Button() {
                let p = model.pipelines.first(where: { viewState.selection.contains($0.id) })
                viewState.editPipelineSheetConfig.setPipeline(p)
                viewState.editPipelineSheetConfig.isPresented = true
...
