...
                        authenticator.openTokenSettingsOnWebsite()
                    }
                }
                if !authenticator.tokenDescription.isEmpty {
                    HStack {
                        Text(LocalizedStringKey(authenticator.tokenDescription))
                            .accessibilityIdentifier("Token description field")
                            .font(.callout)
                            .padding(.vertical, 4)
                            .padding(.horizontal, 8)
                            .overlay(RoundedRectangle(cornerRadius: 2).stroke(Color.secondary, lineWidth: 0.5))
                    }
                }
...
                    .onSubmit {
                        owner.takeInput()
                    }
                
                LabeledContent("Project:") {
                    ComboBox(items: projectList.items.map({ $0.displayName }), text: $project.input)
                        .accessibilityIdentifier("Project combo box")
                        .disabled(owner.text.isEmpty || projectList.items.isEmpty || !projectList.items[0].isValid)
                        .onReceive(project.$text) { t in
                            if let selectedProject = projectList.items.first(where: { $0.displayName == t }) {
                                builder.project = selectedProject
                                builder.setDefaultName()
                                
...
